--- a/Aberrations/ABR-001/ABR001.html
+++ b/Aberrations/ABR-001/ABR001.html
@@ -143,7 +143,7 @@
         <h2>Behavioral Analysis</h2>
         <p>The entity exhibits a range of behaviors linked to its emotional state, with calm periods marked by benign weather patterns and distress leading to severe weather events. Initial interactions have demonstrated the entity's ability to understand and respond to visual cues, although sudden changes in mood can result in hazardous conditions.</p>
 
-        <h2>Appendices</h2>
+        <h2>Additional information</h2>
         <p class="incident-report"><strong>Background:</strong></p>
         <p class="closer-text">The Nephological Entity was discovered following unusual meteorological events in [REDACTED]. Initial containment involved managing an intense thunderstorm, believed to be a manifestation of the entity's distress. Over time, ARI's containment measures have significantly reduced its distress levels.</p>
         <p class="incident-report"><strong>Incident Report #001:</strong></p>
