--- a/Aberrations/ABR-002/ABR002.html
+++ b/Aberrations/ABR-002/ABR002.html
@@ -88,11 +88,6 @@
         li {
             padding: 5px 0;
         }
-        .report-link {
-            color: lightblue;
-            margin-top: 10px; /* Adjust this value to set the desired top margin */
-            display: block;
-        }
     </style>
 </head>
 <body>
@@ -100,6 +95,7 @@
         <a href="https://hazudo.github.io/ARI/homepage.html">Home</a>
         <a href="https://hazudo.github.io/ARI/ABRlist.html">Aberration Index</a>
         <a href="https://hazudo.github.io/ARI/clearanceranklist.html">Clearance Rank List</a>
+        <a href="https://hazudo.github.io/ARI/containmentfacilities.html">Containment Facilities</a>
         <a href="https://hazudo.github.io/ARI/stafftitles.html">Staff Titles</a>
         <a href="https://hazudo.github.io/ARI/about.html">About</a>
         <a href="https://hazudo.github.io/ARI/research.html">Research</a>
@@ -140,14 +136,11 @@
             <li><strong>Phase 3 (Behavioral Alteration):</strong> The final phase involves a complete override of the host's autonomous functions. The host's behavior becomes erratic and aggressive, often exhibiting signs of being controlled by an external force. They become highly susceptible to suggestion and may act against their own interests or safety.</li>
         </ul>
 
-        <h2>Incident Reports</h2>
+        <h2>Appendices</h2>
         <p><strong>Incident Log ABR-002-01</strong></p>
         <p><strong>Date:</strong> ██/██/████</p>
         <p><strong>Summary:</strong> During a routine containment check, Researcher ██████ inadvertently made contact with ABR-002. The researcher exhibited immediate signs of neurological disruption, including severe disorientation and aggressive behavior. Security personnel intervened, but the researcher inflicted significant damage to containment equipment before being subdued. The incident resulted in the researcher's termination to prevent further contamination. Post-incident analysis indicated that ABR-002 had adapted its strategy to exploit a previously unrecognized vulnerability in containment protocols.</p>
         <a href="https://hazudo.github.io/ARI/Aberrations/ABR-002/ABR-002_Incident-001.html" class="report-link">See full report</a>
-
-        <h2>Additional Notes</h2>
-        <p>ABR-002's ability to move inconspicuously in low-light conditions presents a significant risk to containment integrity. Continuous research into ABR-002's properties and potential countermeasures is imperative to ensure the safety of all ARI personnel and facilities. Enhanced lighting and surveillance protocols are to be reviewed and updated regularly based on new findings.</p>
 
         <h1>END OF DOCUMENT</h1>
     </div>
