--- a/Aberrations/ABR-002/ABR002.html
+++ b/Aberrations/ABR-002/ABR002.html
@@ -136,7 +136,7 @@
             <li><strong>Phase 3 (Behavioral Alteration):</strong> The final phase involves a complete override of the host's autonomous functions. The host's behavior becomes erratic and aggressive, often exhibiting signs of being controlled by an external force. They become highly susceptible to suggestion and may act against their own interests or safety.</li>
         </ul>
 
-        <h2>Appendices</h2>
+        <h2>Additional information</h2>
         <p><strong>Incident Log ABR-002-01</strong></p>
         <p><strong>Date:</strong> ██/██/████</p>
         <p><strong>Summary:</strong> During a routine containment check, Researcher ██████ inadvertently made contact with ABR-002. The researcher exhibited immediate signs of neurological disruption, including severe disorientation and aggressive behavior. Security personnel intervened, but the researcher inflicted significant damage to containment equipment before being subdued. The incident resulted in the researcher's termination to prevent further contamination. Post-incident analysis indicated that ABR-002 had adapted its strategy to exploit a previously unrecognized vulnerability in containment protocols.</p>
