--- a/Aberrations/ABR-003/ABR003.html
+++ b/Aberrations/ABR-003/ABR003.html
@@ -134,7 +134,7 @@
         <p>ABR-003 exhibits a pattern of nocturnal activity, beginning its pursuit under cover of darkness. It adheres to a consistent and measured pace, maintaining a fixed distance behind the target. The entity’s presence triggers specific psychological responses, such as the tingling sensation at the neck and a pervasive sense of dread.</p>
         <p>When the target seeks refuge in an enclosed space, ABR-003 attempts entry by mimicking a known voice. This auditory manipulation is powerful enough to compel even informed individuals to open the door, indicating a high degree of psychological influence.</p>
 
-        <h2>Appendices</h2>
+        <h2>Additional information</h2>
         <p><strong>Background:</strong> ABR-003 came to the attention of ARI following an investigation into a series of unexplained disappearances in ███████, Sweden. Survivors reported encounters with an enigmatic entity persistently trailing them and attempting unauthorized entry into their quarters. ARI agents, upon investigating these incidents, identified consistent behavioral patterns associated with ABR-003, leading to the implementation of containment protocols.</p>
         <p><strong>Incident Reports:</strong>
             <ul>
