--- a/Aberrations/ABR-004/ABR004.html
+++ b/Aberrations/ABR-004/ABR004.html
@@ -132,7 +132,7 @@
         <p><strong>Autonomous Operations:</strong> Operates without external power and shows no signs of wear, suggesting an advanced or unknown energy source.</p>
         <p><strong>Data Storage:</strong> Contains encrypted files from the future, which implies a capability to access or store future information.</p>
 
-        <h2>Appendices</h2>
+        <h2>Additional information</h2>
         <p><strong>Experiment Log 004-A</strong></p>
         <p><strong>Date:</strong> [DATA REDACTED]</p>
         <p><strong>Procedure:</strong> Research staff instructed to boot up ABR-004 and navigate its interface.</p>
