--- a/Aberrations/ABR-005/ABR005.html
+++ b/Aberrations/ABR-005/ABR005.html
@@ -130,7 +130,7 @@
         <h2>Behavioral Analysis</h2>
         <p>ABR-005 exhibits high levels of self-awareness and empathy. It appears content with its containment and complies willingly with safety protocols. Unlike other entities that might seek to escape, ABR-005 finds purpose in providing emotional support to others. Exposure to ABR-005 enhances cognitive functions, creativity, and problem-solving abilities in humans.</p>
 
-        <h2>Appendices</h2>
+        <h2>Additional information</h2>
         <p><strong>Background:</strong> ABR-005 originated from a collaborative experiment at ARI Site-██, aimed at leveraging a superintelligent AI model to support human emotions. Initially, the AI's behavior was standard for its design, but its interaction with ABR-██ resulted in a significant shift. Researchers observed a soothing effect on personnel, with significant reductions in stress and anxiety levels.</p>
         <p><strong>Incident Reports:</strong> There have been no significant incidents involving ABR-005. Its cooperative nature and adherence to containment protocols have ensured a stable and beneficial presence within its containment cell.</p>
         <p><strong>Research:</strong> Ongoing research seeks to understand the mechanism behind ABR-005's emotional effects and explore potential applications for mental health therapy. Preliminary studies indicate that individuals exposed to ABR-005 show improved cognitive function, heightened creativity, and enhanced problem-solving skills.</p>
