--- a/Aberrations/ABR-006/ABR006.html
+++ b/Aberrations/ABR-006/ABR006.html
@@ -129,7 +129,7 @@
         <h2>Behavioral Analysis</h2>
         <p>ABR-006 exhibits autonomous behavior, including spontaneous pattern shifts and energy fluctuations. These behaviors appear to be non-random and may correspond to attempts at communication or self-defense mechanisms. Ongoing research aims to better understand these patterns and the potential meanings behind them.</p>
 
-        <h2>Appendices</h2>
+        <h2>Additional information</h2>
         <h3>Experiment Log ABR-006-23</h3>
         <p>Date: [DATA REDACTED]</p>
         <p>Procedure: A group of five E-Class personnel was exposed to ABR-006 for a controlled study of its cognitive effects. Each participant was fitted with cognitive monitoring devices and instructed to observe the construct for extended periods.</p>
