--- a/Aberrations/ABR-007/ABR007.html
+++ b/Aberrations/ABR-007/ABR007.html
@@ -134,7 +134,7 @@
         <h2>Behavioral Analysis</h2>
         <p>ABR-007's behavior includes maintaining a fixed position within cloud formations for periods ranging from several hours to days before disappearing abruptly without leaving residues or atmospheric disturbances. Researchers hypothesize that the anomaly's avoidance of urban areas might be due to factors such as urban light pollution or other yet-to-be-identified variables.</p>
 
-        <h2>Appendices</h2>
+        <h2>Additional information</h2>
         <ul>
             <li><strong>Research Notes:</strong></li>
             <li>**Dr. ███████**: "The Luminous Halo phenomenon's selective manifestation in rural environments, avoiding metropolitan areas, indicates a unique behavioral pattern that requires further investigation. Understanding the underlying cause of this selective appearance is crucial."</li>
