Update and rename Aberrations/ABR008.html to Aberrations/ABR-008/ABR008.html

--- a/Aberrations/ABR-008/ABR008.html
+++ b/Aberrations/ABR-008/ABR008.html
@@ -98,7 +98,7 @@
         <h2>Behavioral Analysis</h2>
         <p>ABR-008's primary behavior involves the extraction of bone matter and the creation of sculptures. It does not show signs of intelligence or intentionality beyond this compulsion. Research indicates that ABR-008 experiences distress if it cannot create an instance of ABR-008-1 for an extended period. Understanding this behavior could lead to improved containment strategies.</p>
 
-        <h2>Appendices</h2>
+        <h2>Additional information</h2>
         <ul>
             <li><strong>Addendum 008-1:</strong> ABR-008 was discovered in █████, Russia, after local authorities were alerted to a series of unusual deaths in the area. The ARI was alerted, and ABR-008 was located and contained without incident. A cover story of a serial killer was disseminated to explain the deaths, and the case was officially closed.</li>
             <li><strong>Addendum 008-2:</strong> Research into the behavior of ABR-008 when it is unable to create an ABR-008-1 instance is ongoing. Preliminary findings suggest that the entity experiences increasing levels of distress, which may be exploited for containment purposes.</li>
