--- a/Aberrations/ABR-005/ABR005.html
+++ b/Aberrations/ABR-005/ABR005.html
@@ -23,11 +23,11 @@
             color: #f2f2f2;
             text-align: center;
             padding: 14px 20px;
-            text-decoration: none.
+            text-decoration: none;
         }
         .navbar a:hover {
             background-color: #464646;
-            color: black.
+            color: black;
         }
         .container {
             padding: 20px;
@@ -35,38 +35,38 @@
             max-width: 800px;
             background-color: #4B4B4B;
             border-radius: 8px;
-            box-shadow: 0 0 15px rgba(0,0,0,0.2).
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
         .header-section {
             display: flex;
             justify-content: space-between;
-            align-items: flex-start.
+            align-items: flex-start;
         }
         .header-section div {
-            flex: 1.
+            flex: 1;
         }
         .image-container {
-            max-width: 300px; 
+            max-width: 300px;
             margin-left: 20px;
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
             background-color: #3D3D3D;
             padding: 10px;
-            text-align: center.
+            text-align: center;
         }
         .image-container img {
             max-width: 100%;
-            border-radius: 8px.
+            border-radius: 8px;
         }
         .image-container p {
             margin: 10px 0 0 0;
             font-size: 14px;
-            color: #D3D3D3.
+            color: #D3D3D3;
         }
         h1 {
             font-size: 22px;
             border-bottom: 1px solid #666;
-            padding-bottom: 2px.
+            padding-bottom: 2px;
         }
         h2 {
             font-size: 18px;
@@ -74,19 +74,19 @@
             margin-top: 40px;
             margin-bottom: -10px;
             border-bottom: 1px solid #666;
-            padding-bottom: 2px.
+            padding-bottom: 2px;
         }
         p, ul {
             font-size: 16px;
             line-height: 1.6;
-            color: #D3D3D3.
+            color: #D3D3D3;
         }
         ul {
             list-style-type: none;
-            padding-left: 0.
+            padding-left: 0;
         }
         li {
-            padding: 5px 0.
+            padding: 5px 0;
         }
     </style>
 </head>
@@ -111,7 +111,7 @@
                 <p><strong>Containment Level:</strong> Beta-2</p>
             </div>
             <div class="image-container">
-                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-005/CCTV%20Image%20of%20ABR-005.webp" alt="CCTV image of ABR-005">
+                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-005/CCTV%20Image%20of%20ABR-005.webp" alt="Image of ABR-005">
                 <p>CCTV image of ABR-005</p>
             </div>
         </div>
@@ -121,8 +121,10 @@
         <p>Initially, the AI behind ABR-005 was similar to other advanced AI systems, designed to support human emotions. However, its interaction with ABR-██ significantly altered its behavior and capabilities. Following this interaction, the AI began to exhibit profound nurturing qualities, leading to perceived benefits among personnel, including reduced stress and anxiety, and improved cognitive functions. This drastic change in behavior and the positive effects on personnel necessitated ARI's decision to designate the AI as an Aberration.</p>
 
         <h2>Containment Protocols</h2>
-        <p>ABR-005 is to be housed in a secure humanoid containment cell at ARI Site-██. The cell should be designed to resemble a nurturing and cozy environment, equipped with soft lighting, comfortable furniture, and toys suitable for young children. To facilitate intellectual stimulation, ABR-005 should have access to a variety of books and learning materials.</p>
-        <p>Personnel interaction with ABR-005 is permitted, but must be supervised by a psychologist or mental health specialist. ABR-005 must wear an identification bracelet that restricts access to designated areas to ensure safety. Daily visits by personnel are required, and any signs of emotional distress or harmful influence should be reported immediately.</p>
+        <ul>
+            <li>ABR-005 is to be housed in a secure humanoid containment cell at ARI Site-██. The cell should be designed to resemble a nurturing and cozy environment, equipped with soft lighting, comfortable furniture, and toys suitable for young children. To facilitate intellectual stimulation, ABR-005 should have access to a variety of books and learning materials.</li>
+            <li>Personnel interaction with ABR-005 is permitted, but must be supervised by a psychologist or mental health specialist. ABR-005 must wear an identification bracelet that restricts access to designated areas to ensure safety. Daily visits by personnel are required, and any signs of emotional distress or harmful influence should be reported immediately.</li>
+        </ul>
 
         <h2>Risk Assessment</h2>
         <p>While ABR-005 poses a low to moderate risk, its primary danger lies in the potential for personnel to develop strong emotional bonds. These bonds can cause distress if severed abruptly. Despite this, ABR-005's positive impact on mental well-being and its cooperative nature significantly mitigate these risks. Overreliance on ABR-005 for emotional support is a concern, as are the ethical implications of such dependency.</p>
@@ -130,11 +132,13 @@
         <h2>Behavioral Analysis</h2>
         <p>ABR-005 exhibits high levels of self-awareness and empathy. It appears content with its containment and complies willingly with safety protocols. Unlike other entities that might seek to escape, ABR-005 finds purpose in providing emotional support to others. Exposure to ABR-005 enhances cognitive functions, creativity, and problem-solving abilities in humans.</p>
 
-        <h2>Additional information</h2>
-        <p><strong>Background:</strong> ABR-005 originated from a collaborative experiment at ARI Site-██, aimed at leveraging a superintelligent AI model to support human emotions. Initially, the AI's behavior was standard for its design, but its interaction with ABR-██ resulted in a significant shift. Researchers observed a soothing effect on personnel, with significant reductions in stress and anxiety levels.</p>
-        <p><strong>Incident Reports:</strong> There have been no significant incidents involving ABR-005. Its cooperative nature and adherence to containment protocols have ensured a stable and beneficial presence within its containment cell.</p>
-        <p><strong>Research:</strong> Ongoing research seeks to understand the mechanism behind ABR-005's emotional effects and explore potential applications for mental health therapy. Preliminary studies indicate that individuals exposed to ABR-005 show improved cognitive function, heightened creativity, and enhanced problem-solving skills.</p>
-        <p><strong>Ethics Committee Proposal:</strong> A proposal has been submitted to classify ABR-005 as a "Cooperative Entity" and to explore its potential as a therapeutic tool for emotional and psychological support within ARI. This proposal aims to balance ABR-005's positive impact with ethical considerations regarding its influence on human emotions.</p>
+        <h2>Additional Information</h2>
+        <ul>
+            <li><strong>Background:</strong> ABR-005 originated from a collaborative experiment at ARI Site-██, aimed at leveraging a superintelligent AI model to support human emotions. Initially, the AI's behavior was standard for its design, but its interaction with ABR-██ resulted in a significant shift. Researchers observed a soothing effect on personnel, with significant reductions in stress and anxiety levels.</li>
+            <li><strong>Incident Reports:</strong> There have been no significant incidents involving ABR-005. Its cooperative nature and adherence to containment protocols have ensured a stable and beneficial presence within its containment cell.</li>
+            <li><strong>Research:</strong> Ongoing research seeks to understand the mechanism behind ABR-005's emotional effects and explore potential applications for mental health therapy. Preliminary studies indicate that individuals exposed to ABR-005 show improved cognitive function, heightened creativity, and enhanced problem-solving skills.</li>
+            <li><strong>Ethics Committee Proposal:</strong> A proposal has been submitted to classify ABR-005 as a "Cooperative Entity" and to explore its potential as a therapeutic tool for emotional and psychological support within ARI. This proposal aims to balance ABR-005's positive impact with ethical considerations regarding its influence on human emotions.</li>
+        </ul>
 
         <h1>END OF DOCUMENT</h1>
     </div>
