--- a/Aberrations/ABR-009/ABR009.html
+++ b/Aberrations/ABR-009/ABR009.html
@@ -112,7 +112,7 @@
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-009/Image%20of%20ABR-009.jpg" alt="Image of ABR-009">
-                <p>First image of ABR-009</p>
+                <p>Image of ABR-009</p>
             </div>
         </div>
 
