Update and rename Aberrations/ABR010.html to Aberrations/ABR-010/ABR010.html

--- a/Aberrations/ABR-010/ABR010.html
+++ b/Aberrations/ABR-010/ABR010.html
@@ -14,7 +14,7 @@
             color: #D3D3D3;
         }
         .navbar {
-            background-color: #4B4B4B;
+            background-color: #1a1a1a;
             overflow: hidden;
         }
         .navbar a {
@@ -36,6 +36,32 @@
             background-color: #4B4B4B;
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
+        }
+        .header-section {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+        .header-section div {
+            flex: 1;
+        }
+        .image-container {
+            max-width: 300px;
+            margin-left: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            background-color: #3D3D3D;
+            padding: 10px;
+            text-align: center;
+        }
+        .image-container img {
+            max-width: 100%;
+            border-radius: 8px;
+        }
+        .image-container p {
+            margin: 10px 0 0 0;
+            font-size: 14px;
+            color: #D3D3D3;
         }
         h1 {
             font-size: 22px;
@@ -65,19 +91,30 @@
     </style>
 </head>
 <body>
-    <div class="navbar">
-        <a href="homepage.html">Home</a>
-        <a href="ABRlist.html">Aberrations Index</a>
-        <a href="about.html">About</a>
-        <a href="research.html">Research</a>
-        <a href="contact.html">Contact</a>
+     <div class="navbar">
+        <a href="https://hazudo.github.io/ARI/homepage.html">Home</a>
+        <a href="https://hazudo.github.io/ARI/ABRlist.html">Aberration Index</a>
+        <a href="https://hazudo.github.io/ARI/clearanceranklist.html">Clearance Rank List</a>
+        <a href="https://hazudo.github.io/ARI/containmentfacilities.html">Containment Facilities</a>
+        <a href="https://hazudo.github.io/ARI/stafftitles.html">Staff Titles</a>
+        <a href="https://hazudo.github.io/ARI/about.html">About</a>
+        <a href="https://hazudo.github.io/ARI/research.html">Research</a>
+        <a href="https://hazudo.github.io/ARI/contact.html">Contact</a>
     </div>
 
     <div class="container">
         <h1>ABERRATION DOCUMENT: ABR-010</h1>
-        <p><strong>Aberration Designation:</strong> ABR-010</p>
-        <p><strong>Threat Level:</strong> Class III: Hazardous</p>
-        <p><strong>Containment Level:</strong> Gamma-2</p>
+        <div class="header-section">
+            <div>
+                <p><strong>Aberration Designation:</strong> ABR-010 "The Toothpick"</p>
+                <p><strong>Threat Level:</strong> Class III: Hazardous</p>
+                <p><strong>Containment Level:</strong> Gamma-2</p>
+            </div>
+            <div class="image-container">
+                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-010/Image%20of%20ABR010.jpg" alt="Image of ABR-010">
+                <p>First image of ABR-010</p>
+            </div>
+        </div>
 
         <h2>Description</h2>
         <p>ABR-010, commonly referred to as "The Toothpick," is a seemingly ordinary wooden toothpick approximately 6.5 cm in length. Despite its mundane appearance, ABR-010 exhibits several anomalous properties that manifest when it comes into contact with human saliva or is otherwise activated by human touch.</p>
@@ -95,17 +132,17 @@
         <p>ABR-010's primary anomalous effect is the induction of compulsive tooth-cleaning behavior. This compulsion overrides all other instincts and motivations, rendering the affected individual single-mindedly focused on the act. The affected individual becomes increasingly frantic and aggressive if attempts are made to remove the toothpick from their possession.</p>
         <p>ABR-010 has shown no signs of sentience or self-awareness, and its actions appear purely mechanical and reactionary. However, its regenerative abilities suggest a degree of complexity in its construction or an unknown energy source fueling its anomalous properties.</p>
 
-        <h2>Appendices</h2>
-        <p><strong>Background:</strong> ABR-010 was recovered from a dental clinic in ████████ after a series of unexplained injuries and violent incidents were reported. The clinic staff had unknowingly been using ABR-010 as part of their routine supplies, leading to multiple patients and staff members being affected. The Aberration Research Institute was alerted following a particularly severe incident where a patient had to be sedated and restrained after exhibiting extreme aggression.</p>
-
-        <p><strong>Incident Reports:</strong>
-            <ul>
-                <li><strong>Incident 010-05:</strong> A researcher accidentally activated ABR-010 during an experiment, leading to severe self-inflicted injuries before containment could be re-established. The researcher required extensive medical and psychological treatment.</li>
-                <li><strong>Incident 010-11:</strong> ABR-010 breached containment briefly due to a malfunction in the containment locker. The toothpick was found in the possession of a security guard, who had to be subdued to prevent further harm.</li>
-            </ul>
-        </p>
-
-        <p><strong>Research:</strong> Current research focuses on understanding the mechanism behind ABR-010's compulsive influence and regenerative capabilities. Efforts are being made to identify any potential weaknesses or methods to neutralize its effects. Additionally, studies are being conducted to explore the origins of ABR-010 and any possible connections to other known aberrations.</p>
+        <h2>Additional Information</h2>
+        <ul>
+            <li><strong>Background:</strong> ABR-010 was recovered from a dental clinic in ████████ after a series of unexplained injuries and violent incidents were reported. The clinic staff had unknowingly been using ABR-010 as part of their routine supplies, leading to multiple patients and staff members being affected. The Aberration Research Institute was alerted following a particularly severe incident where a patient had to be sedated and restrained after exhibiting extreme aggression.</li>
+            <li><strong>Incident Reports:</strong>
+                <ul>
+                    <li><strong>Incident 010-05:</strong> A researcher accidentally activated ABR-010 during an experiment, leading to severe self-inflicted injuries before containment could be re-established. The researcher required extensive medical and psychological treatment.</li>
+                    <li><strong>Incident 010-11:</strong> ABR-010 breached containment briefly due to a malfunction in the containment locker. The toothpick was found in the possession of a security guard, who had to be subdued to prevent further harm.</li>
+                </ul>
+            </li>
+            <li><strong>Research:</strong> Current research focuses on understanding the mechanism behind ABR-010's compulsive influence and regenerative capabilities. Efforts are being made to identify any potential weaknesses or methods to neutralize its effects. Additionally, studies are being conducted to explore the origins of ABR-010 and any possible connections to other known aberrations.</li>
+        </ul>
 
         <h1>END OF DOCUMENT</h1>
     </div>
