--- a/Aberrations/ABR-010/ABR010.html
+++ b/Aberrations/ABR-010/ABR010.html
@@ -111,8 +111,8 @@
                 <p><strong>Containment Level:</strong> Gamma-2</p>
             </div>
             <div class="image-container">
-                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-010/Image%20of%20ABR010.jpg" alt="Image of ABR-010">
-                <p>First image of ABR-010</p>
+                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-010/ABR-010%2C%20appearing%20as%20just%20a%20regular%20toothpick.jpg" alt="Image of ABR-010">
+                <p>ABR-010, appearing as just a regular toothpick.</p>
             </div>
         </div>
 
