--- a/Aberrations/ABR-010/ABR010.html
+++ b/Aberrations/ABR-010/ABR010.html
@@ -91,7 +91,7 @@
     </style>
 </head>
 <body>
-     <div class="navbar">
+    <div class="navbar">
         <a href="https://hazudo.github.io/ARI/homepage.html">Home</a>
         <a href="https://hazudo.github.io/ARI/ABRlist.html">Aberration Index</a>
         <a href="https://hazudo.github.io/ARI/clearanceranklist.html">Clearance Rank List</a>
@@ -118,12 +118,12 @@
 
         <h2>Description</h2>
         <p>ABR-010, commonly referred to as "The Toothpick," is a seemingly ordinary wooden toothpick approximately 6.5 cm in length. Despite its mundane appearance, ABR-010 exhibits several anomalous properties that manifest when it comes into contact with human saliva or is otherwise activated by human touch.</p>
-        <p>Upon activation, ABR-010 induces a compulsive behavior in the individual who touched it, driving them to continuously clean their teeth with it. This behavior persists until either the toothpick is forcibly removed or the individual suffers significant injury to their gums and mouth. During this period, the individual becomes oblivious to their surroundings and may exhibit aggressive behavior if interrupted.</p>
+        <p>Upon activation, ABR-010 induces a compulsive behavior in the individual who touched it, driving them to continuously clean their teeth with it. This behavior persists until either the toothpick is forcibly removed or the individual drops ABR-010 due to loss of consciousness, seizure, or other severe physical reactions. During this period, the individual becomes oblivious to their surroundings and may exhibit aggressive behavior if interrupted.</p>
         <p>ABR-010 has also been observed to self-repair and regenerate when damaged, making it virtually indestructible by conventional means. Attempts to destroy ABR-010 using fire, crushing, or cutting have all failed, with the toothpick reassembling itself within minutes.</p>
 
         <h2>Containment Protocols</h2>
         <p>ABR-010 is to be contained within a small, airtight, and transparent polycarbonate case. The case must be kept in a secured containment locker at Site-64. The locker should be monitored by security personnel via surveillance cameras at all times. Handling of ABR-010 is strictly prohibited except under controlled experimental conditions and with the authorization of Level 4 personnel.</p>
-        <p>In the event of accidental activation, personnel are to utilize Class-B amnestics on the affected individual and immediately return ABR-010 to its containment case using non-conductive tools. Psychological evaluations are mandatory for all personnel involved in handling ABR-010, and any signs of compulsive behavior or trauma must be reported and treated promptly.</p>
+        <p>In the event of accidental activation, personnel are to utilize sedatives or other medical interventions to safely remove ABR-010 from the affected individual's possession. Psychological evaluations are mandatory for all personnel involved in handling ABR-010, and any signs of compulsive behavior or trauma must be reported and treated promptly.</p>
 
         <h2>Risk Assessment</h2>
         <p>ABR-010 poses a significant psychological and physical threat to individuals who come into contact with it. The compulsive behavior it induces can lead to severe oral injuries, infections, and long-term psychological trauma. Furthermore, its indestructible nature and regenerative capabilities present a unique containment challenge, necessitating constant vigilance and specialized containment protocols.</p>
