--- a/containmentfacilities.html
+++ b/containmentfacilities.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta.charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classification of Containment Levels - Aberration Research Institute</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -50,7 +50,7 @@
             border-bottom: 1px solid #666;
             padding-bottom: 2px;
         }
-        p, ul {
+        p {
             font-size: 16px;
             line-height: 1.6;
             color: #D3D3D3;
@@ -61,10 +61,6 @@
         }
         li {
             padding: 5px 0;
-        }
-        .examples {
-            margin-left: 20px;
-            margin-bottom: 20px;
         }
     </style>
 </head>
@@ -86,87 +82,62 @@
         <h2>Α α - Alpha (Benign)</h2>
         <ul>
             <li><strong>Alpha-1:</strong> Non-threatening, easily contained, or beneficial.</li>
-            <li class="examples"><strong>Examples:</strong> Docile plants with unique properties (e.g., glow-in-the-dark flowers used for illumination).</li>
             <li><strong>Alpha-2:</strong> Slightly unpredictable but generally harmless.</li>
-            <li class="examples"><strong>Examples:</strong> Communicating plants that respond to human emotions by changing colors.</li>
         </ul>
 
         <h2>Β β - Beta (Low Risk)</h2>
         <ul>
             <li><strong>Beta-1:</strong> Minor containment required; low risk.</li>
-            <li class="examples"><strong>Examples:</strong> Small animals with non-harmful anomalous traits.</li>
             <li><strong>Beta-2:</strong> Unusual but not hazardous; basic precautions needed.</li>
-            <li class="examples"><strong>Examples:</strong> Objects that change shape but pose no danger.</li>
         </ul>
 
         <h2>Γ γ - Gamma (Moderate Risk)</h2>
         <ul>
             <li><strong>Gamma-1:</strong> Require specific containment measures, moderate risk.</li>
-            <li class="examples"><strong>Examples:</strong> Telepathic animals capable of basic mind reading.</li>
             <li><strong>Gamma-2:</strong> Unpredictable or partially understood; potential danger if improperly contained.</li>
-            <li class="examples"><strong>Examples:</strong> Shape-shifting materials that can alter their form based on environmental stimuli.</li>
             <li><strong>Gamma-3:</strong> Intentional or malevolent behavior; robust containment needed.</li>
-            <li class="examples"><strong>Examples:</strong> Sentient AI with the potential to override control systems.</li>
         </ul>
 
         <h2>Δ δ - Delta (High Risk)</h2>
         <ul>
             <li><strong>Delta-1:</strong> Highly dangerous but containable with advanced measures.</li>
-            <li class="examples"><strong>Examples:</strong> Controlled black holes used for research but needing constant monitoring.</li>
             <li><strong>Delta-2:</strong> Exert control or influence over objects, space, or personnel.</li>
-            <li class="examples"><strong>Examples:</strong> Mind-controlling parasites capable of influencing host behavior.</li>
             <li><strong>Delta-3:</strong> Potential widespread damage or catastrophe if containment fails.</li>
-            <li class="examples"><strong>Examples:</strong> Uncontrollable weather machines that can create severe weather patterns.</li>
         </ul>
 
         <h2>Ε ε - Epsilon (Extreme Danger)</h2>
         <ul>
             <li><strong>Epsilon-1:</strong> Imminent threat to ARI, local populations, or global stability.</li>
-            <li class="examples"><strong>Examples:</strong> Time manipulation devices that can alter historical events.</li>
             <li><strong>Epsilon-2:</strong> Nearly impossible to contain due to immense power or chaotic behavior.</li>
-            <li class="examples"><strong>Examples:</strong> Interdimensional portals that can randomly open and close, risking cross-dimensional invasions.</li>
             <li><strong>Epsilon-3:</strong> Potential bioweapon or mass-destruction capabilities; top-priority containment.</li>
-            <li class="examples"><strong>Examples:</strong> Bio-engineered viruses designed for rapid and lethal outbreaks.</li>
         </ul>
 
         <h2>Ζ ζ - Zeta (Special Cases)</h2>
         <ul>
             <li><strong>Zeta-1:</strong> Require unconventional or experimental containment methods.</li>
-            <li class="examples"><strong>Examples:</strong> Living paintings that can trap people within their scenes.</li>
             <li><strong>Zeta-2:</strong> Symbiotic or intertwined with key personnel, technology, or other Aberrations.</li>
-            <li class="examples"><strong>Examples:</strong> Soul-bonded artifacts that require a human host to function.</li>
             <li><strong>Zeta-3:</strong> Involving alien technology or cosmic phenomena.</li>
-            <li class="examples"><strong>Examples:</strong> Extraterrestrial devices with unknown functions and potentially catastrophic capabilities.</li>
         </ul>
 
         <h2>Η η - Eta (Uncontained)</h2>
         <ul>
             <li><strong>Eta-1:</strong> Known and monitored but currently uncontainable due to resource or technological limitations.</li>
-            <li class="examples"><strong>Examples:</strong> Wandering spectral entities that appear sporadically and unpredictably.</li>
             <li><strong>Eta-2:</strong> Actively evading containment efforts, posing significant threat.</li>
-            <li class="examples"><strong>Examples:</strong> Rogue telekinetic individuals who have escaped containment.</li>
             <li><strong>Eta-3:</strong> Unknown whereabouts; high priority for retrieval and containment.</li>
-            <li class="examples"><strong>Examples:</strong> A sentient nanobot swarm that escaped during a research project.</li>
         </ul>
 
         <h2>Θ θ - Theta (Experimental)</h2>
         <ul>
             <li><strong>Theta-1:</strong> Require specific containment strategies due to their unique properties.</li>
-            <li class="examples"><strong>Examples:</strong> Entities that exhibit quantum tunneling or phasing abilities.</li>
             <li><strong>Theta-2:</strong> Demonstrate anomalous interactions with known physical laws.</li>
-            <li class="examples"><strong>Examples:</strong> Objects that defy gravity or thermodynamics.</li>
             <li><strong>Theta-3:</strong> Exhibit behavior or properties that are not yet fully understood or classified.</li>
-            <li class="examples"><strong>Examples:</strong> Phenomena that alter time perception or cause temporal anomalies.</li>
         </ul>
 
         <h2>Ι ι - Iota (Psychological)</h2>
         <ul>
             <li><strong>Iota-1:</strong> Interact with or manipulate cognitive functions or perceptions.</li>
-            <li class="examples"><strong>Examples:</strong> Memetic entities that influence thoughts or behaviors.</li>
             <li><strong>Iota-2:</strong> Capable of inducing psychological or emotional changes in individuals.</li>
-            <li class="examples"><strong>Examples:</strong> Artifacts that evoke intense fear or euphoria.</li>
             <li><strong>Iota-3:</strong> Pose significant risks due to their ability to affect large populations mentally.</li>
-            <li class="examples"><strong>Examples:</strong> Devices that broadcast subliminal messages or induce mass hysteria.</li>
         </ul>
     </div>
 </body>
